--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,8 @@
                     <button type="button" class="btn btn-success " data-bs-toggle="modal" data-bs-target="#mymodal">Add Student Data</button>
 
                 </div>
+            </div>
+        </div>
                 <br />
 
 
@@ -56,12 +58,12 @@
                             <a href="/delete/{{row.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure to delete?')">Delete</a>
                         </td>
                     </tr>
-                    {% endfor %}
-                </table>
-            </div>
-        </div>
 
-        <div id="modaledit" class="modal fade" role="dialog">
+
+
+
+
+        <div id="modaledit{{row.0}}" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -70,20 +72,21 @@
 
                     </div>
                     <div class="modal-body">
-                        <form action="" method="POST">
+                        <form action="{{url_for('update')}}" method="POST">
                             <div class="form-group">
                                 <label>Name:</label>
-                                <input type="text" class="form-control" name="name" value="Akash">
+                                <input type="hidden" name="id" value="{{row.0}}">
+                                <input type="text" class="form-control" name="name" value="{{row.1}}">
                             </div>
                             <br />
                             <div class="form-group">
                                 <label>Email:</label>
-                                <input type="email" class="form-control" name="email" value="xyz@gmail.com">
+                                <input type="email" class="form-control" name="email" value="{{row.2}}">
                             </div>
                             <br />
                             <div class="form-group">
                                 <label>Phone:</label>
-                                <input type="text" class="form-control" name="phone" value="90909090">
+                                <input type="text" class="form-control" name="phone" value="{{row.3}}">
                             </div>
                             <br />
                             <div class="form-group">
@@ -99,8 +102,8 @@
                 </div>
             </div>
         </div>
-
-
+        {% endfor %}
+        </table>
 
         <div id="mymodal" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -140,6 +143,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 {% endblock %}
 
